# simple-graphics

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  config.mk  option.cmake
benchmark/: README.md
benchmark/resize/: README.md
benchmark/resize/1ch/: README.md
benchmark/resize/2ch/: README.md
benchmark/resize/3ch/: README.md
benchmark/resize/4ch/: README.md
docs/: README.md  memory-allocator-animation.html  profiling-lttng.md
docs/animations/core/: queue.html  threadpool.html
docs/animations/resize/: bicubic.html  bilinear.html  nearest-neighbor.html
include/: sgl-compiler.h  sgl-core.h  sgl-fixed_point.h  sgl-osal.h  sgl-type.h  sgl.h  sgl_memory_cast.h
include/fixed_point/: generic.h  neon.h
include/osal/: dummy.h  posix.h  windows.h
prebuild/libpng/include/: pnglibconf.h
prebuild/libpng/lib/cmake/PNG/: PNGTargets.cmake
prebuild/libpng/lib/pkgconfig/: libpng16.pc
prebuild/zlib/lib/: libz.so.1  libz.so.1.4.1.1
prebuild/zlib/lib/pkgconfig/: zlib.pc
script/: cppcheck-report.sh  profile-lttng.sh
script/config/: compiler-warnings.cmake  cppcheck.cmake  detect-install-dirs.cmake  load-version.cmake  option-summary.cmake  runtime-checks.cmake  sgl-config.cmake  sgl-config.h.in  sgl-core-package-config.cmake.in  test-dependencies.cmake
script/config/arch/: detect-arch.cmake
script/config/cppcheck/: cppcheck-misra.json.in  cppcheck.cmake  suppressions.txt
script/config/lttng/: detect-lttng.cmake
script/config/package/: detect-install-dirs.cmake  load-version.cmake  package.cmake  sgl-core-package-config.cmake.in  sgl-core.pc.cmakein
script/config/qemu/: detect-qemu.cmake
script/config/simd/: detect-simd.cmake  sgl-test-neon.c
script/config/thread/: detect-thread.cmake
script/misra/: common.cmake  gnu.cmake  llvm.cmake
script/toolchain/: aarch64-none-linux-gnu.cmake  aarch64-none-linux-llvm.cmake  common.cmake  gnu.cmake  llvm.cmake
test/: CMakeLists.txt
test/memory/: CMakeLists.txt  main.c
test/queue/: CMakeLists.txt  main.c
test/resize/: CMakeLists.txt  main.c
test/sample/: CMakeLists.txt  main.c
test/threadpool/: CMakeLists.txt  main.c
test/util/: CMakeLists.txt  util.c  util.h
tools/: lttng-resize-report.py  resize-benchmark-summary-svg.py  resize-benchmark-viewer.html
